add cmdline parser
- verbosity levels
- specify number(s) of test(s) to run (instead of running them all)

--- a/config.h.in
+++ b/config.h.in
@@ -5,5 +5,5 @@
 #mesondefine HAVE_LIBPNG
 #mesondefine HAVE_LIBEXIF
 #mesondefine HAVE_LIBLCMS2
-#medondefine HAVE_LIBBMP
+#mesondefine HAVE_LIBBMP
 
