Change the syntax of test definitions file
- every test is now enclosed in a 'test { ... }' block. A description
  can be added in parentheses between the keyword 'test' and the '{...}'
  block: 'test (Description of test) { commands... }'.
  (Previously, tests were separated by empty lines)
- no more (optional) semicolons between test commands
- allow trailing comments with '# ...'. Previously, a line was either a
  comment or not, appending a comment actually silently dropped that
  test.
- syntax of the actual commands is unchanged

The parser is still pretty messy, but at least it's now contained in
a single source file.

--- a/meson.build
+++ b/meson.build
@@ -35,8 +35,7 @@ endif
 executable('bmplibtest',
            'vartest.c',
            'imgstack.c',
-           'cmdparser.c',
-           'read-testdefs.c',
+           'testparser.c',
            'conf.c',
            install: true,
            dependencies: [bmpdep, pngdep, mathdep])
