parser: move mem allocation to separate file allocate.c

--- a/meson.build
+++ b/meson.build
@@ -46,6 +46,7 @@ executable('bmplibtest',
            'vartest.c',
            'imgstack.c',
            'testparser.c',
+           'allocate.c',
            'conf.c',
            install: true,
            dependencies: [bmpdep, pngdep, mathdep])
