add bmpinspect utility
A small standalone program to inspect BMP header files.
Does not (and should not) use bmplib.

--- a/meson.build
+++ b/meson.build
@@ -49,4 +49,10 @@ executable('bmplibtest',
            'allocate.c',
            'conf.c',
            install: true,
-           dependencies: [bmpdep, pngdep, mathdep])
+           dependencies: [bmpdep, pngdep, mathdep]
+)
+
+executable('bmpinspect',
+           'bmpinspect.c',
+           install: true,
+)
