add OS/2 arrays, icons, pointers

--- a/meson.build
+++ b/meson.build
@@ -56,3 +56,10 @@ executable('bmpinspect',
            'bmpinspect.c',
            install: true,
 )
+
+
+executable('bmparray',
+           'bmparray.c',
+           install: true,
+           dependencies: [bmpdep],
+)
